Update alias and titular names in index.html

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <div class="lineRegalos"></div>
 
                 <h6 class="regalo__date">Alias:</h6>
-                <p class="name__alias" id="alias">belenseguranieva</p>
+                <p class="name__alias" id="alias">neseg8</p>
                 <button class="alias__button" onclick="copyText()">
                     <img class="copiar__icon" src="assets/vectores/copiar.svg" alt="">
                     Copiar Alias</button>
@@ -399,7 +399,7 @@
 
                 <div class="lineRegalos"></div>
 
-                <h6 class="regalo__date">Titular: Segura Nieva Belén Agustina</h6>
+                <h6 class="regalo__date">Titular: Ramon Moises Segura</h6>
                 <!-- <h6 class="regalo__date">CBU:</h6>
                 <p class="name__cbu" id="cbuAlias">(aquí tu cbu)</p>
                 <button class="cbu__button" onclick="copyCbuText()">
